@@ -1,6 +1,8 @@
 package com.datastax.spark.connector.embedded
 
 import java.net.InetAddress
+import java.nio.charset.StandardCharsets
+import java.util.StringTokenizer
 
 import scala.collection.JavaConversions._
 import scala.util.Try
@@ -52,18 +54,36 @@ private[connector] class CassandraRunner(
   private val nodeToolMainClass = "org.apache.cassandra.tools.NodeTool"
   private val logbackFilePath = getClass.getResource("/com/datastax/spark/connector/embedded/logback-test.xml").toString
   private val logConfigFileProperty = s"-Dlogback.configurationFile=$logbackFilePath"
+  private val javaLibraryPath = s"-Djava.library.path=${new File("../dse-db/lib/sigar-bin").getAbsolutePath}:${new File("./dse-db/lib/sigar-bin").getAbsolutePath}:${new File("../resources/cassandra/lib/sigar-bin").getAbsolutePath}:${new File("./resources/cassandra/lib/sigar-bin").getAbsolutePath}"
+
+  private def isJava11: Boolean = new StringTokenizer(System.getProperty("java.version"), "-.").nextToken.toInt >= 9
+
+  private val java11Args: List[String] = if (isJava11) readJvmOptions("java11-prod.jvmoptions") ++ readJvmOptions("java11-test.jvmoptions") else List()
+
+  private def readJvmOptions(file: String) : List[String] = {
+    var f: File = new File("../test/conf", file)
+    if (!f.exists())
+      f = new File("./test/conf", file)
+    FileUtils.readLines(f, StandardCharsets.UTF_8).toList
+  }
+
+  private val processArgs = List(javaBin,
+    "-Xms512M", "-Xmx1G", "-Xmn384M", "-XX:OnOutOfMemoryError=kill -9 %p",
+    javaLibraryPath,
+    sizeEstimatesUpdateIntervalProperty,
+    cassandraConfProperty, jammAgentProperty, superuserSetupDelayProperty, jmxPortProperty,
+    logConfigFileProperty, "-cp", classPath) ++ java11Args ++ List(cassandraMainClass, "-f")
 
   val location = Thread.currentThread().getStackTrace
     .filter(_.getClassName.startsWith("com.datastax")).lastOption
     .map(ste => s"   at ${ste.getFileName}:${ste.getLineNumber} (${ste.getClassName}.${ste.getMethodName}").getOrElse("")
+
   println(s"--------======== Starting Embedded Cassandra on port ${baseConfiguration.nativeTransportPort} ========--------\n$location")
 
+  println(s"  process args: $processArgs")
+
   private[embedded] val process = new ProcessBuilder()
-    .command(javaBin,
-      "-Xms512M", "-Xmx1G", "-Xmn384M", "-XX:+UseConcMarkSweepGC", "-XX:OnOutOfMemoryError=kill -9 %p",
-      sizeEstimatesUpdateIntervalProperty,
-      cassandraConfProperty, jammAgentProperty, superuserSetupDelayProperty, jmxPortProperty,
-      logConfigFileProperty, "-cp", classPath, cassandraMainClass, "-f")
+    .command(processArgs)
     .inheritIO()
     .start()
 
@@ -89,8 +109,8 @@ private[connector] class CassandraRunner(
 
   def nodeToolCmd(params: String*): Unit = {
     Try {
-      val cmd = List(javaBin, "-Xms128M", "-Xmx512M", cassandraConfProperty, "-cp", classPath,
-        nodeToolMainClass, "-h", baseConfiguration.listenAddress, "-p", baseConfiguration.jmxPort.toString) ++ params
+      val cmd = List(javaBin, "-Xms128M", "-Xmx512M", cassandraConfProperty, "-cp", classPath) ++
+        java11Args ++ List(nodeToolMainClass, "-h", baseConfiguration.listenAddress, "-p", baseConfiguration.jmxPort.toString) ++ params
       val nodeToolCmdProcess = new ProcessBuilder()
         .command(cmd: _*)
         .inheritIO()
